<resources>
    <!-- Main Activity -->
    <string name="app_name">ReminderGenius</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_snack_bar_installation_deleted">Installation gelöscht</string>
    <string name="main_snack_bar_installation_delete_undo">Rückgängig machen</string>
    <string name="main_date_time_picker_hint">Datum</string>

    <!-- Contact -->
    <string name="contact_text_view_title">Kontakte</string>
    <string name="contact_button_add_test_contact">Test Kontakt hinzufügen</string>
    <string name="contact_setting_clear_db">Alle Kontakte löschen</string>
    <string name="contact_toast_clear_db">Alle Kontakte werden gelöscht!</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_contact">Kontakte</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_contacts">Kunden</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="menu_picture">Bild hinzufügen</string>

    <!-- Add Contact -->
    <string name="add_contact_title">Kontakt hinzufügen</string>
    <string name="add_contact_search_hint">Name, Vorname, Ort</string>
    <string name="add_contact_name_text_view_hint">Vorname</string>
    <string name="add_contact_surname_text_view_hint">Nachname</string>
    <string name="add_contact_email_hint">E-Mail</string>
    <string name="add_contact_phone_hint">Telefonnummer</string>
    <string name="add_contact_address_hint">Adresse</string>
    <string name="add_contact_zip_text_view_hint">PLZ</string>
    <string name="add_contact_city_text_view_hint">Ort</string>
    <string name="add_contact_canton_text_view">Kt.</string>

    <!-- Search Contact Result -->
    <string name="search_contact_result_title">Suchresultate</string>

    <!-- Kontakt -->
    <string name="contact_title">Kontakt hinzufügen</string>
    <string name="contact_search_hint">Name, Vorname</string>
    <string name="contact_name_text_view_hint">Vorname</string>
    <string name="contact_surname_text_view_hint">Nachname</string>
    <string name="contact_email_hint">E-Mail</string>
    <string name="contact_phone_hint">Telefonnummer</string>
    <string name="title_activity_search_contact_result">SearchContactResultActivity</string>
    <string name="recycler_view_item_delete">löschen</string>
    <string name="show_contact_text_view_title">Kontakt</string>
    <string name="show_contact_text_view_firstname" />
    <string name="show_contact_text_view_lastname" />
    <string name="contact_snack_bar_deleted">Kontakt gelöscht</string>
    <string name="contact_snack_bar_undo_delete">Rückgängig machen</string>
    <string name="contact_search_desc">Kontakt suchen..</string>


    <!-- Installation -->
    <string name="title_activity_add_installation">Installation hinzufügen</string>
    <string name="add_installation_product_spinner_hint">Produkt</string>
    <string name="add_installation_customer_spinner_hint">Kunde</string>
    <string name="add_installation_installation_date">Installationsdatum</string>
    <string name="add_installation_expire_date_hint">Ablaufdatum</string>
    <string name="add_installation_service_intervall_text_view">Service Intervall</string>
    <string name="add_installation_service_intervall_number">J.</string>
    <string name="add_installation_notes_hint">Bemerkungen</string>
    <string name="add_installation_images_hint">Bilder</string>
    <string name="add_installation_notification_checkbox_hint">Erinnerungen</string>
    <string name="title_activity_show_installation">Installation anzeigen</string>
    <string name="show_installation_contact_header">Kontakt</string>
    <string name="show_installation_productcategory_header">Produkt</string>
    <string name="show_installation_header">Installation</string>
    <string name="show_installation_notifycustomermail_check_box">Kontakt per Mail benachrichtigen</string>
    <string name="show_installation_notifycustomersms_check_box">Kontakt per SMS benachrichtigen</string>
    <string name="show_installation_notifytechnicianmail_check_box">Mich per Mail benachrichtigen</string>
    <string name="show_installation_notifytechniciansms_check_box">Mich per SMS benachrichtigen</string>
    <string name="show_installation_next_service_text">Nächster Service</string>
    <string name="show_installation_installation_text">Installation</string>
    <string name="expiring_service_fragment_text">Es ist bald ein Service für fällig. Soll der Kunde benachrichtigt werden?</string>
    <string name="expiring_service_fragment_send_email_text">E-Mail</string>
    <string name="expiring_service_fragment_send_sms_text">SMS</string>
    <string name="send_email_subject">Service für Ihre Sanitärinstallation</string>
    <string name="send_email_content">Sehr geehrter Kunde\n\n
    Für die Sanitärinstallation vom %1$s ist bald wieder ein Service fällig\n
    Bitte kontaktieren Sie mich, sodass wir einen Termin vereinbaren können.\n\n

    Freundliche Grüsse
    </string>
    <string name="send_sms_content">Sehr geehrter Kunde\n\n
    Für die Sanitärinstallation vom %1$s ist bald wieder ein Service fällig\n
    Bitte kontaktieren Sie mich, sodass wir einen Termin vereinbaren können.\n\n

    Freundliche Grüsse
    </string>



    <string name="title_activity_show_image_fullscreen">ShowImageFullscreenActivity</string>
    <string name="title_activity_image_fullscreen">Bild im Vollbildmodus anzeigen</string>
    <string name="notification_title">Service bald fällig</string>
    <string name="notification_text">%1$s, %2$s</string>
    <string name="main_action_show_notification_text">Benachrichtigung erzeugen</string>
    <string name="notification_category_text">Fällige Services</string>
    <string name="notification_category_description_text">Zeigt bald fällige Services an</string>

    <string name="preferences_notification_category">Benachrichtigungen</string>
    <string name="preferences_display_notifications_title_text">Benachrichtigungen anzeigen</string>
    <string name="preferences_display_notifications_summary_text">Sollen Benachrichtigungen für bald fällige Services angezeigt werden?</string>
    <string name="preferences_display_notifications_months_summary_text">Benachrichtigungen werden so weit im Voraus angezeigt.</string>
    <string name="preferences_display_notifications_months_title_text">Monate im Voraus</string>
    <string name="preferences_display_notifications_frequency_days_summary_text">Neue Benachrichtigungen werden alle x Tage erstellt.</string>
    <string name="preferences_display_notifications_frequency_days_title_text">Häufigkeit der Benachrichtigung</string>
    <string name="notification_due_date_text">Fälligkeitsdatum</string>
    <string name="notification_product_text">Produkt</string>
    <string name="installation_text_view_title">Installation</string>
    <string name="installation_search_desc">Installation suchen...</string>
    <string name="main_button_show_all_installations">Alle</string>
    <string name="main_text_view_months_filter">%1$s Monate</string>


</resources>
