<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">

    <PreferenceCategory android:title="@string/preferences_notification_category">

        <CheckBoxPreference
            android:id="@+id/preferences_display_notifications"
            android:defaultValue="true"
            android:key="preferences_display_notifications"
            android:summary="@string/preferences_display_notifications_summary_text"
            android:title="@string/preferences_display_notifications_title_text" />

        <SeekBarPreference
            android:defaultValue="2"
            android:max="13"
            android:dependency="preferences_display_notifications"
            android:key="preferences_display_notifications_months"
            android:summary="@string/preferences_display_notifications_months_summary_text"
            android:title="@string/preferences_display_notifications_months_title_text" />

        <SeekBarPreference
            android:defaultValue="1"
            android:max="14"
            android:dependency="preferences_display_notifications"
            android:key="preferences_display_notifications_frequency_days"
            android:summary="@string/preferences_display_notifications_frequency_days_summary_text"
            android:title="@string/preferences_display_notifications_frequency_days_title_text" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>