<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_installation"
                android:icon="@drawable/ic_installation_black_24dp"
                android:title="@string/installation_text_view_title" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact_black_24dp"
                android:title="@string/contact_text_view_title" />
        </menu>

    </item>

</menu>
