<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ServiceExpiringFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:background="@drawable/border_rounded_corner"
        >

        <TextView
            android:id="@+id/expiring_service_fragment_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiring_service_fragment_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/expiring_service_fragment_send_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiring_service_fragment_send_email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expiring_service_fragment_title_text_view"/>

        <Button
            android:id="@+id/expiring_service_fragment_send_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/expiring_service_fragment_send_sms_text"
            app:layout_constraintStart_toEndOf="@+id/expiring_service_fragment_send_email_button"
            app:layout_constraintTop_toTopOf="@+id/expiring_service_fragment_send_email_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>