<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.AddInstallationActivity"
    tools:showIn="@layout/activity_add_installation">

    <Spinner
        android:id="@+id/add_installation_product_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/add_installation_customer_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_installation_product_spinner_hint"
        app:layout_constraintStart_toStartOf="@+id/add_installation_product_spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_installation_customer_spinner_hint"
        app:layout_constraintStart_toStartOf="@+id/add_installation_customer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/add_installation_product_details_text_view" />

    <EditText
        android:id="@+id/add_installation_installation_date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/main_date_time_picker_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/add_installation_expire_date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/main_date_time_picker_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_installation_installation_date"
        app:layout_constraintStart_toStartOf="@+id/add_installation_installation_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_installation_customer_spinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_installation_expire_date_hint"
        app:layout_constraintStart_toStartOf="@+id/add_installation_expire_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_installation_installation_date_text_view" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_installation_service_intervall_text_view"
        app:layout_constraintStart_toEndOf="@+id/add_installation_installation_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_installation_customer_spinner" />

    <NumberPicker
        android:id="@+id/add_installation_service_intervall_number"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/add_installation_service_intervall_number"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/add_installation_expire_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/add_installation_product_details_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_installation_product_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>